Overflow hidden on comments. Fixes #399.

--- a/wp-content/themes/glp/less/participant-video.less
+++ b/wp-content/themes/glp/less/participant-video.less
@@ -108,6 +108,7 @@
 				}
 				.comment-content {
 					max-width: 80.9%;
+					overflow: hidden;
 				}
 				img {
 					margin-right: 12px;
